--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-scripts-ts",
-  "version": "2.15.1",
+  "name": "@nutgaard/react-scripts",
+  "version": "0.0.4",
   "description": "Configuration and scripts for Create React App.",
-  "repository": "wmonk/create-react-app",
+  "repository": "nutgaard/create-react-app",
   "license": "BSD-3-Clause",
   "engines": {
     "node": ">=6"
   },
   "bugs": {
-    "url": "https://github.com/wmonk/create-react-app/issues"
+    "url": "https://github.com/nutgaard/create-react-app/issues"
   },
   "files": [
     "bin",
@@ -18,7 +18,7 @@
     "utils"
   ],
   "bin": {
-    "react-scripts-ts": "./bin/react-scripts-ts.js"
+    "react-scripts": "./bin/react-scripts.js"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
@@ -36,14 +36,16 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "22.4.2",
+    "less": "^3.0.4",
+    "less-loader": "4.1.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "source-map-loader": "^0.2.1",
     "react-dev-utils": "^5.0.1",
     "resolve": "1.6.0",
+    "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "ts-jest": "22.0.1",
@@ -60,6 +62,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "@types/prop-types": "^15.5.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "typescript": "^2.7.1"
