--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nutgaard/react-scripts",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Configuration and scripts for Create React App.",
   "repository": "nutgaard/create-react-app",
   "license": "BSD-3-Clause",
@@ -27,6 +27,7 @@
     "babel-preset-react-app": "^3.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "css-hot-loader": "^1.3.9",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
