Add possibility to specify homepage in dev

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "config",
     "scripts",
     "template",
-    "utils"
+    "utils",
+    "custom-react-dev-utils"
   ],
   "bin": {
     "react-scripts-ts": "./bin/react-scripts-ts.js"
