--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,10 @@ cache:
 install: true
 script:
  - 'tasks/e2e-simple.sh'
+deploy:
+  provider: npm
+  email: "navit@nav.no"
+  api_key: $NPM_TOKEN
+  on:
+    tags: true
+  skip_cleanup: true
