--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@navikt/create-react-app-typescript-less",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "Configuration and scripts for Create React App.",
   "repository": "github:navikt/create-react-app-typescript-less",
   "license": "BSD-3-Clause",
