--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "dependencies": {
     "autoprefixer": "8.5.0",
-    "babel-jest": "20.0.3",
+    "babel-core": "6.26.3",
+    "babel-jest": "23.4.2",
     "babel-loader": "7.1.2",
     "babel-preset-react-app": "^3.1.2",
+    "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-hot-loader": "^1.3.9",
@@ -37,10 +39,10 @@
     "dotenv-expand": "4.2.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
-    "fork-ts-checker-webpack-plugin": "^0.2.8",
+    "fork-ts-checker-webpack-plugin": "0.4.4",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "jest": "23.5.0",
     "less": "^3.0.4",
     "less-loader": "4.1.0",
     "object-assign": "4.1.1",
@@ -53,7 +55,7 @@
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "22.0.1",
+    "ts-jest": "23.1.4",
     "ts-loader": "^2.3.7",
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "tslint": "^5.7.0",
